# J-stock

./: .awsignore  .env.example  .gitignore  AGENTS.md  BACKTEST_CONFIG_GUIDE.md  CODE_DUPLICATION_ANALYSIS.md  CODE_INVENTORY.md  COMMANDS_CONFIGURATION_ANALYSIS.md  DEPLOYMENT_SUMMARY_JAN16.md  DEVELOPMENT_ROADMAP.md  JSON_FILES_INVESTIGATION_REPORT.md  PHASE3_FINE_GRID_GUIDE.md  PHASE3_QUICK_START.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  REFACTOR_PLAN.md  SCORER_INTEGRATION.md  SCORER_REVIEW.md  SCORER_USAGE.md  STRATEGY_CATALOG.json  STRATEGY_EVALUATION_GUIDE.md  STRATEGY_EVALUATION_IMPLEMENTATION_SUMMARY.md  STRATEGY_EVALUATION_QUICK_START.md  STRATEGY_EVALUATION_SYSTEM_README.md  STRATEGY_FAILURE_ANALYSIS.md  USAGE_GUIDE.md  all_strategies.json  analyze_results.py  analyze_scores.py  backtest_25strategies_1month_output.txt  backtest_config.json  backtest_debug.txt  backtest_results_20260108.csv  check_monitor_performance.py  check_topix.py  config.aws-sim.json  config.aws.json  config.json.example  config.local.json  (+50 more)
.codex/: config.toml
.github/: copilot-instructions.md
backtest_results/: backtest_result_20260109_140645.txt  backtest_result_20260109_155702.txt  backtest_result_20260109_165307.txt  backtest_result_20260109_165509.txt  backtest_result_20260109_170219.txt  backtest_result_20260109_170820.txt  backtest_result_20260109_171401.txt  backtest_result_20260109_172737.txt  backtest_result_20260109_175419.txt  backtest_result_20260109_180636.txt  backtest_result_20260109_181020.txt  backtest_result_20260109_181147.txt  (+1 more)
data/: fetch_universe.json  (+5 more)
(+666 files in other folders)
