[project]
name = "j-stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2023.10.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.33.1",
    "ta>=0.11.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]
